=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

2018/06/29 1.10.3
=================

Fixes
-----

- Fixed an issue where the configuration file for plugins was not loaded when
  the UI was served from another location than ``/`` resulting in a blank
  browser canvas.

2018/05/29 1.10.2
=================

Fixes
-----

- Fixed an issue that caused the CrateDB process CPU calculation to be false.

2018/05/14 1.10.1
=================

Fixes
-----

 - Show column data types in table schema in upper case.

 - Fixed interface glitches that occurred on table tab when the last table was
   dropped.

2018/05/14 1.10.0
=================

Changes
-------

 - Added a new tab for views which lists available views and their properties.

 - Updated ``information_schema.tables`` queries to return only tables, but not
   views, in order to be compatible with future versions of CrateDB.

2018/05/14 1.9.1
================

Fixes
-----

 - Fixed several bugs concerning filtering tables/views where table
   information would not be updated properly. Also fixed the clear filter
   button for both table and view filtering.

 - Removed abbreviations in the overview and table view. Updated nodes view.

 - Remove trailing space from column name in tables detail view.


2018/03/20 1.9.0
================

Changes
-------

 - Adapted queries to be compatible with CrateDB 3.0+

2018/03/19 1.8.4
================

Fixes
-----

 - Fixed handling of ``null`` values correctly in Cluster Tab of the Admin UI.

 - Updated the ``Size`` label in the table detail to ``Size (Sum of primary shards)``

2018/03/06 1.8.3
================

Fixes
-----

 - Updated the link to the stat collection in the monitoring plugin.

 - Updated the table list search to filter tables only by table name and table
   schema.

 - Fixed an issue that caused the table list to display wrong results.

2018/02/09 1.8.2
================

Fixes
-----
