@@ -5,6 +5,8 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+- Fixed the navigation component to allow opening URLs in new tabs.
+
 2018/06/29 1.10.3
 =================
 
